# SnipyBot-CodeWithVincentServer

./: .gitignore  README.md  __main__.py  _logging.py  bot.py  config.json  constants.py  keep_alive.py  main.py  monkey_patches.py  pyproject.toml  schema.prisma  test.py
SnipyBot/: __init__.py  _logging.py  bot.py  constants.py  enums.py  keep_alive.py  main.py  monkey_patches.py
SnipyBot/cogs/: formattation_code.py
SnipyBot/database/: db.py
SnipyBot/slash_commands/: __init__.py  about.py  packages_searcher.py  roles_giver.py  slash_formattattion_code.py  slash_latest_videos.py  system_roles_dropdown.py
cogs/: formattationCode.py  formattation_code.py
logs/: test_log.txt
slashCommands/: SlashFormattattionCode.py  SlashLatestVideos.py  SystemDropdown.py  moderation.txt  multiDropdown.py  packages_searcher.py  roles_giver.py  slash_latest_videos.py
slash_commands/: about.py  languages_select.py  packages_searcher.py  roles_giver.py  slash_formattattion_code.py  slash_latest_videos.py  system_roles_dropdown.py
