[tool.poetry]
name = "SnipyBot"
version = "0.1.0"
description = ""
authors = ["Snipy7374 <snipy7374@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.10"
disnake = "^2.4.0"
aiohttp = "^3.8.1"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"